feat: Добавить запрос DELETE /spawns/{spawn}
